fixed nav button spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,9 +48,11 @@ $navbar-default-bg: black;
 }
 
 .btn-xlarge {
-  font-size: 1.7em;
+  font-size: 1.5em;
 
   background-color: black;
+
+  margin-bottom: 20px;
 }
 .article-actions {
   border-top: 1px solid #eaeaea;
